kubernetes/apps/network/ingress-nginx/external/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json#/properties/spec/properties/egress/items/properties/toServices/type
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "nginx-external-allow-ingress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx-external
  ingress:
  - fromEntities:
    - "world"
